styles/base/base.scss
*,
*:after,
*:before {
  box-sizing: border-box;
  user-select: none;
}

html {
  font-size: calc(100vw / 1920 * 10); // super important info
  line-height: 1;
  position: fixed;
  @extend %cover;
  overflow: hidden;
  background: $color-contessa;
  color: $color-white;

  @include media("<phone") {
    font-size: calc(100vw / 750 * 10);
  }
}
body {
  @extend %cover;
  @extend %description-16;

  font-family: $font-suisse-bp;
  position: fixed;
  
}

a {
  color: inherit;
  outline: none;
  text-decoration: none;
}

button {
  cursor: pointer;
  color: inherit;
  outline: none;
  background: none;
  border: none;
}

canvas{
  pointer-events: none;
  position: relative;
}

img {
  vertical-align: middle;
  opacity: 0;
  transition: opacity 0.4s ease;

  &.loaded{
    opacity: 1;
  }
}

.content {
  @extend %cover;
}

[data-animation='label'],
[data-animation='paragraph'],
[data-animation='title'] {
  span {
    display: inline-block;
    overflow: hidden;
    vertical-align: top;
  }
}

